po: update po/es_ES/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/member.po
+++ b/po/es_ES/member.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Adrian Torralba Roman, 2016
+# Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
 # Carlos Capote <carloscapote@masticable.org>, 2014
 # Eduardo Riesco <eduardo.riesco@gmail.com>, 2011
 # francescbassas <francesc@babu.cat>, 2015
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-18 11:50+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-23 12:57+0000\n"
+"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2315,7 +2315,7 @@ msgstr "¿Está sobreescrito el estado del miembro?"
 
 #: CRM/Member/DAO/Membership.php
 msgid "Membership Recurring Contribution"
-msgstr ""
+msgstr "Contribución de miembros recurrente"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log ID"
@@ -2323,15 +2323,15 @@ msgstr "Identificador del Log del miembro"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log Start Date"
-msgstr ""
+msgstr "Registro fecha de inicio de membresía"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log End Date"
-msgstr ""
+msgstr "Registro fecha de fin de membresía"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log modified By"
-msgstr ""
+msgstr "Registro de membresía modificado por "
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Maximum Related Memberships"
@@ -2345,44 +2345,44 @@ msgstr "Es necesario grabar un pago de miembro cuando se utiliza una tarifa de p
 msgid ""
 "Contribution submitted by a staff person using member's credit card for "
 "signup"
-msgstr ""
+msgstr "Contribución presentada por un miembro del personal con la tarjeta de crédito del miembro para la inscripción"
 
 #: CRM/Member/Form/Membership.php
 msgid ""
 "The financial types associated with the old and new membership types are "
 "different. You may want to edit the contribution associated with this "
 "membership to adjust its financial type."
-msgstr ""
+msgstr "Los tipos financieros asociados con los antiguos y nuevos tipos de membresía son diferentes.\nPuede que quiera editar la contribución asociada a esta membresía para ajustar el tipo financiero."
 
 #: CRM/Member/Form/Membership.php
 msgid ""
 "The cost of the old and new membership types are different. You may want to "
 "edit the contribution associated with this membership to adjust its amount."
-msgstr ""
+msgstr "El coste de los antiguos y nuevos tipos de membresía son diferentes.\nPuede que quiera editar la contribución asociada a esta membresía para ajustar la cantidad."
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid ""
 "Contribution submitted by a staff person using member's credit card for "
 "renewal"
-msgstr ""
+msgstr "Contribución presentada por un miembro del personal con la tarjeta de crédito del miembro para la renovación"
 
 #: CRM/Member/Form/Task/Batch.php CRM/Member/Form/Task/PickProfile.php
 #: CRM/Member/Task.php
 msgid "Update multiple memberships"
-msgstr ""
+msgstr "Actualizar múltiples membresías"
 
 #: CRM/Member/Form/Task/Batch.php
 msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple memberships."
-msgstr ""
+msgstr "Tipo de campo(s) Archivo o Auto-completado en el perfil seleccionado no son soportados en la actualización múltiple de membresías."
 
 #: CRM/Member/Form/Task/PickProfile.php
 msgid ""
 "The maximum number of members you can select for Update multiple memberships"
 " is %1. You have selected %2. Please select fewer members from your search "
 "results and try again."
-msgstr ""
+msgstr "El numero máximo de miembros que puede seleccionar para la actualización múltiple de membresías es %1. Tienes %2 seleccionados. Por favor seleccione menos miembros en sus resultados de la  búsqueda e inténtelo de nuevo."
 
 #: CRM/Member/Form/Task/PickProfile.php
 msgid ""
@@ -2390,38 +2390,38 @@ msgid ""
 "before you can use Update multiple memberships. Navigate to Administer "
 "CiviCRM >> CiviCRM Profile to configure a Profile. Consult the online "
 "Administrator documentation for more information."
-msgstr ""
+msgstr "Necesita crear un perfil que contenga los campos %1 que desea editar antes de poder usar la actualización múltiple de membresías. Navega a Administrar CiviCRM >> CiviCRM Perfil para configurar un perfil. Consulta la documentación en linea de Administrador para más información."
 
 #: CRM/Member/Task.php
 msgid "Export members"
-msgstr ""
+msgstr "Exportar miembros"
 
 #: CRM/Member/Task.php
 msgid "PDF letters - print for memberships"
-msgstr ""
+msgstr "Cartas PDF - imprimir para membresías"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "For auto-renewing memberships the emails are sent when each payment is "
 "received"
-msgstr ""
+msgstr "Para la auto-renovación de membresía, los correos electrónicos serán enviados cuando se reciba cada pago"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Membership Status Is Override?"
-msgstr ""
+msgstr "¿Anular estado de membresía?"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Yes\" to display only membership with Status Override set "
 "(membership is manually forced to a specific status)"
-msgstr ""
+msgstr "Selecciona \"Sí\" para ver solo la membresía con un estado de anulación ( la membresía sera forzada a un estado específico)"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"No\" to display only memberships without Status Override set "
 "(membership is subject to the normal status rules)"
-msgstr ""
+msgstr "Selecciona \"Sí\" para ver solo la membresía con un estado de anulación ( la membresía está sujeta a las normas normales de estado)"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Select neither to show all memberships"
-msgstr ""
+msgstr "Seleccione ninguno para mostrar todas las membresías"
