po: update po/es_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -32,7 +32,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-23 10:21+0000\n"
+"PO-Revision-Date: 2016-08-24 07:14+0000\n"
 "Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -6455,7 +6455,7 @@ msgid ""
 "              The result will land on the same day of the month except for days 29-31 when the target month contains fewer days than the previous month.\n"
 "              For example, if a job is scheduled to run on August 31st, the following invocation will occur on October 1st, and then the 1st of every month thereafter.\n"
 "              To avoid this issue, please schedule Monthly and Quarterly jobs to run within the first 28 days of the month."
-msgstr ""
+msgstr "Los valores relativos mensuales se calculan en base a los meses transcurridos.\n              El resultado puede caer en el mismo día del mes, excepto los días del 29 al 31 cuando el mes objeto tiene menos días que el anterior.\n              Por ejemplo si una tarea programada está prevista para que se ejecute el día 31 de Agosto, la próxima invocación se hará el 1 de Octubre,  desde entonces todos los 1 de cada mes.\n              Para evitar este problema, por favor programe las tareas mensuales y trimestrales entre los primeros 28 días del mes."
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
@@ -6503,7 +6503,7 @@ msgstr "Idioma por defecto del sistema"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Follow recipient preferred language"
-msgstr ""
+msgstr "Seguir idioma preferido de destinatario"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Communication language"
@@ -6601,7 +6601,7 @@ msgid ""
 "Enabling Access Control by Financial Types is only required if you need users in one role to access some financial transactions but not ones with certain financial types.</p>\n"
 "<p>For example, Planned Giving bequests may be highly confidential and not appropriate for staff organizing events to see, even though they need to be able to administer the payments for ticket purchases.</p>\n"
 "<p>After enabling, you will be able to set create, view, edit, and delete permissions separately for each financial type by navigating to Administer > Users and Permissions > Permissions (Access Control), and clicking on the Access Control link for your CMS."
-msgstr ""
+msgstr "Habilitando el control de acceso por tipo financiero solo es requerido si necesita que los usuarios pertenezcan a  un rol para acceder a ciertas transacciones pero no con otros tipos financieros.</p>\n<p>Por ejemplo, las donaciones planificadas pueden ser altamente confidencial y no ser apropiados para que el personal de organización de eventos los vea, sin embargo necesita que puedan administrar los pagos de las compras</p>\n<p>Después de habilitarlo, puede configurar los permisos crear, ver, editar y borrar individualmente para cada tipo financiero navegando a Administrar > Usuarios y Permisos > Permisos (Control de Acceso), y pinchando en el enlace Control de acceso del CMS."
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
@@ -6806,19 +6806,19 @@ msgstr "Unir esta llamada a la API para devolver valores o filtros de una entida
 msgid ""
 "The new fields will be selectable from the \"Params\" and \"Fields to "
 "return\" lists."
-msgstr ""
+msgstr "Los nuevos campos se podrán seleccionar en las listas \"Parámetros\" y \"Campos a devolver\"."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Example: If the api entity is Email, you can also fetch the display name of "
 "the contact this email belongs to."
-msgstr ""
+msgstr "Ejemplo: Si el API entity es Email, puede también mostrar el nombre del contacto al que pertenece el correo electrónico."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Disambiguation: Joins are different from api chaining in that joins execute "
 "as a single SELECT query, and only work for api \"get\" operations."
-msgstr ""
+msgstr "Desambiguación: Uniones son diferentes de el APi de encadenamiento en que las uniones ejecutan una consulta simple SELECT, y solo trabaja con la operación \"get\" del API."
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid ""
@@ -6828,11 +6828,11 @@ msgid ""
 "civicrm_financial_trxn tables. Before publishing an extension on civicrm.org"
 " that does any of this, please ask for a special bookkeeping code review for"
 " the extension."
-msgstr ""
+msgstr "Dada la importancia de la auditoria,NO se recomienda a los desarrolladores de extensiones que escriban código para agregar, actualizar o eliminar entradas en las tablas de civicrm_financial_item, civicrm_entity_financial_trxn, y civicrm_financial_trxn. Antes de publicar una extensión en civicrm.org que haga algo de esto, por favor pida una revisión especial del código de contabilidad para la extensión."
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Join on:"
-msgstr ""
+msgstr "Unir:"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Skin"
@@ -6844,7 +6844,7 @@ msgstr "Plugins"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Select optional extra features"
-msgstr ""
+msgstr "Selecciona las opciones extras"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
@@ -6852,7 +6852,7 @@ msgid ""
 "recurring basis. Messages used for membership renewal reminders, as well as "
 "event and activity related reminders should be created via <a "
 "href=\"%1\">Schedule Reminders</a>."
-msgstr ""
+msgstr "Las plantillas de mensajes permiten fácilmente, crear correos electrónicos o cartas de manera recurrente. Mensajes usados para la renovación de membresía, así como los eventos los recordatorios de actividades pueden ser creadas a través de <a href=\"%1\">Programar recordatorios</a>."
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
@@ -6860,29 +6860,29 @@ msgid ""
 "However, subscribe, unsubscribe and opt-out messages are configured at <a "
 "href=\"%1\">Administer > CiviMail > Headers, Footers and Automated "
 "Messages</a>."
-msgstr ""
+msgstr "También puede usar las plantillas de mensajes para el contenido de CiviMail ( Correos electrónicos masivos), baja de suscripción y salidas de mensajes se configuran en <a href=\"%1\">Administrar > CiviMail > Cabecera, Pie y Mensajes automáticos</a>."
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid "Cleanup reports menu"
-msgstr ""
+msgstr "Menu de informes de limpieza"
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid ""
 "This will add links for all currently active reports to the \"Reports\" menu"
 " under the relevant component. If you have added report instances to other "
 "menus, they will be moved to \"Reports\".  Are you sure?"
-msgstr ""
+msgstr "Esto añadirá enlaces a todos los informes seleccionados en el menú \"Informes\" bajo el componente relevante. Si ha añadido instancias de informes a otros menús, estos seran movidos a \"Informes\". ¿Estás seguro? "
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
 "You can limit the recipient of the reminder to contacts with the specified "
 "preferred language. You can also choose to add contacts that have no "
 "preferred language defined."
-msgstr ""
+msgstr "Puede limitar los destinatarios de los recordatorios con el idioma preferido. También puede elegir añadir contactos que no tengan un idioma preferido."
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
 "This is the communication language. If there are template translation or "
 "tokens, they will be localized accordingly. By default, the system default "
 "language will be used."
-msgstr ""
+msgstr "Esto es el idioma de comunicación. Si hay plantilla de traducción o tokens, estos serán traducidos acordemente.Por defecto, se usara el idioma del sistema."
