po: update po/sv_SE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-08 08:30+0000\n"
+"PO-Revision-Date: 2016-08-24 08:00+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -375,7 +375,7 @@ msgstr "Registrerad av ID"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Discount Amount"
-msgstr ""
+msgstr "Rabattvärde"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Event Cart ID"
@@ -3443,7 +3443,7 @@ msgstr "Anmälan (skarp)"
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "Don't see your event listed? Try \"Search All or by Date Range\" above."
-msgstr "Syns inte ditt arrangemang? Prova \"Sök alla, eller inom datumintervall\" här ovanför."
+msgstr "Syns inte arrangemanget du letade efter? Prova \"Sök alla, eller inom datumintervall\" här ovanför."
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "No available Events match your search criteria. Suggestions:"
@@ -3654,7 +3654,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role"
-msgstr ""
+msgstr "Standardroll för deltagare"
 
 #: CRM/Event/DAO/Event.php
 msgid "Maximum number of additional participants per registration"
