--- a/po/tr_TR/menu.po
+++ b/po/tr_TR/menu.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 08:03+0000\n"
+"PO-Revision-Date: 2016-08-25 01:36+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -1552,7 +1552,7 @@ msgstr "Bağış Raporları"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Administer"
-msgstr "Yönetin"
+msgstr "Yönetim"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
