--- a/po/tr_TR/common-components.po
+++ b/po/tr_TR/common-components.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 07:47+0000\n"
+"PO-Revision-Date: 2016-08-25 01:31+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -1922,7 +1922,7 @@ msgstr "Kalıp Başlığı"
 
 #: CRM/Event/Form/ManageEvent/EventInfo.php templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "Tip"
-msgstr "Bahşiş"
+msgstr "İpucu"
 
 #: CRM/Event/Form/Participant.php
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
