po: update po/tr_TR/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/event.po
+++ b/po/tr_TR/event.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 07:53+0000\n"
+"PO-Revision-Date: 2016-08-25 01:37+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -1353,7 +1353,7 @@ msgstr "Katılımcı Arama"
 
 #: CRM/Event/Form/SearchEvent.php
 msgid "Show Current and Upcoming Events"
-msgstr "Güncel ve Yaklaşan Etkinlikleri Göster"
+msgstr "Güncel ve Yaklaşan Etkinlikler Görüntülensin"
 
 #: CRM/Event/Form/SearchEvent.php
 msgid "Search All or by Date Range"
@@ -1840,13 +1840,13 @@ msgstr "Kip güncellenemedi. Yalnız bu %1 kaydedilsin mi?"
 msgid ""
 "Warning: Deleting this event template will also delete associated Event "
 "Registration Page and Event Fee configurations."
-msgstr "Uyarı: Bu etkinlik kalıbı silindiğinde, ilgili Etkinlik Kayıt Sayfası ve Etkinlik Ücreti ayarları da silinir."
+msgstr "UYARI: Bu etkinlik kalıbı silindiğinde, ilgili Etkinlik Kayıt Sayfası ve Etkinlik Ücreti ayarları da silinir."
 
 #: templates/CRM/Event/Form/ManageEvent/Delete.tpl
 msgid ""
 "Warning: Deleting this event will also delete associated Event Registration "
 "Page and Event Fee configurations."
-msgstr "Uyarı: Bu etkinlik silindiğinde, ilgili Etkinlik Kayıt Sayfası ve Etkinlik Ücreti ayarları da silinir."
+msgstr "UYARI: Bu etkinlik silindiğinde, ilgili Etkinlik Kayıt Sayfası ve Etkinlik Ücreti ayarları da silinir."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -2603,7 +2603,7 @@ msgstr "Bu katılımcıdan çevrimdışı ödemeleri kabul ediyorsanız <strong>
 msgid ""
 "WARNING: Deleting this registration will result in the loss of related "
 "payment records (if any)."
-msgstr "Uyarı: Bu kayıt silinirse, ilgili tüm ödeme kayıtları (varsa) kaybolacak."
+msgstr "UYARI: Bu kayıt silinirse, ilgili tüm ödeme kayıtları (varsa) kaybolacak."
 
 #: templates/CRM/Event/Form/Participant.tpl
 msgid " There are %1 more Participant(s) registered by this participant."
