po: update po/tr_TR/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/member.po
+++ b/po/tr_TR/member.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 07:48+0000\n"
+"PO-Revision-Date: 2016-08-25 01:37+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -1530,7 +1530,7 @@ msgstr "Yeni Üyelik Durumu"
 msgid ""
 "WARNING: Deleting this option will result in the loss of all membership "
 "records of this status."
-msgstr "Uyarı: Bu seçenek silindiğinde bu durumu kullanan tüm üyelik verileri kaybolacak."
+msgstr "UYARI: Bu seçenek silindiğinde bu durumu kullanan tüm üyelik verileri kaybolacak."
 
 #: templates/CRM/Member/Form/MembershipStatus.tpl
 msgid ""
@@ -1602,7 +1602,7 @@ msgstr "Durum etkin."
 msgid ""
 "WARNING: Deleting this option will result in the loss of all membership "
 "records of this type."
-msgstr "Uyarı: Bu seçenek silindiğinde bu türdeki tüm üyelik kayıtları kaybolacak."
+msgstr "UYARI: Bu seçenek silindiğinde bu türdeki tüm üyelik kayıtları kaybolacak."
 
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid "e.g. 'Student', 'Senior', 'Honor Society'..."
