po: update po/tr_TR/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/report.po
+++ b/po/tr_TR/report.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 08:01+0000\n"
+"PO-Revision-Date: 2016-08-25 01:37+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -1827,7 +1827,7 @@ msgid ""
 "WARNING: Deleting this option will result in the loss of all Report related "
 "records which use the option. This may mean the loss of a substantial amount"
 " of data, and the action cannot be undone. Do you want to continue?"
-msgstr "Uyarı: Bu seçenek silinirse, bu seçeneği kullanan tüm raporlar kaybolacak. Büyük miktarda bir verinin kaybolması söz konusu ve bu işlem geri alınamaz. Devam etmek ister misiniz?"
+msgstr "UYARI: Bu seçenek silinirse, bu seçeneği kullanan tüm raporlar kaybolacak. Büyük miktarda bir verinin kaybolması söz konusu ve bu işlem geri alınamaz. Devam etmek ister misiniz?"
 
 #: templates/CRM/Report/Form/Register.tpl
 msgid "Report title appear in the display screen."
