po: update po/tr_TR/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/pledge.po
+++ b/po/tr_TR/pledge.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 06:30+0000\n"
+"PO-Revision-Date: 2016-08-25 01:36+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -427,7 +427,7 @@ msgstr "Ödeme Sözünü Veren"
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
 " was %1."
-msgstr "Ödeme sözü toplamı ödeme ayalarmaları nedeniyle değiştirildi. Özgün ödeme sözü tutarı %1 idi."
+msgstr "Ödeme sözü toplamı ödeme ayarlamaları nedeniyle değiştirildi. Özgün ödeme sözü tutarı %1 idi."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
