--- a/po/tr_TR/contribute.po
+++ b/po/tr_TR/contribute.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 08:04+0000\n"
+"PO-Revision-Date: 2016-08-25 01:38+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -2280,7 +2280,7 @@ msgstr "Kredi Kartını Silin"
 msgid ""
 "WARNING: If you delete this option, contributors will not be able to use "
 "this credit card type on your Online Contribution pages."
-msgstr "Uyarı: Bu seçeneği silerseniz, katılımcılar Çevrimiçi Katkı Sayfalarında bu kredi kartını kullanamayacak."
+msgstr "UYARI: Bu seçeneği silerseniz, katılımcılar Çevrimiçi Katkı Sayfalarında bu kredi kartını kullanamayacak."
 
 #: templates/CRM/Contribute/Form/AcceptCreditCard.tpl
 msgid ""
@@ -2795,7 +2795,7 @@ msgstr "Yeni bir katkıda bulunmak için bu formu kullanın. Seçilmiş ödeme a
 msgid ""
 "WARNING: Deleting this contribution will result in the loss of the "
 "associated financial transactions (if any)."
-msgstr "Uyarı: Bu katkı silinirse, ilgili tüm mali işlemler (varsa) kaybolacak."
+msgstr "UYARI: Bu katkı silinirse, ilgili tüm mali işlemler (varsa) kaybolacak."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "submit credit card contribution"
@@ -3999,7 +3999,7 @@ msgstr "Ödeme Aracını Silin"
 msgid ""
 "WARNING: Deleting this option will result in the loss of all contribution "
 "records which use this option."
-msgstr "Uyarı: Bu seçenek silinirse, bu seçeneği kullanan tüm katkı kayıtları kaybolacak."
+msgstr "UYARI: Bu seçenek silinirse, bu seçeneği kullanan tüm katkı kayıtları kaybolacak."
 
 #: templates/CRM/Contribute/Form/Search/Common.tpl
 msgid "Contribution Dates"
