po: update po/es_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -32,7 +32,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-24 07:14+0000\n"
+"PO-Revision-Date: 2016-08-25 07:36+0000\n"
 "Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -681,7 +681,7 @@ msgstr "Todos los contactos que han firmado una peticion en CiviCampaign seran a
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "CiviContribute Component Settings"
-msgstr "Configuracies del componente CiviContribute"
+msgstr "Configuración del componente CiviContribute"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Invoice Prefix"
@@ -709,7 +709,7 @@ msgstr "Seleccione el intérvalo para la fecha de vencimiento."
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Notes or Standard Terms"
-msgstr "Notas y Términos Estáandar"
+msgstr "Notas o Términos Estándar"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter note or message to be displayed on PDF invoice or credit notes "
@@ -897,7 +897,7 @@ msgstr "CivilMail deduplica direcciones de correoelectrónico por defecto."
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Hashed Mailing URL's"
-msgstr "URL's comprimidos"
+msgstr "URL's encriptadas con Hash"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid ""
@@ -1020,7 +1020,7 @@ msgstr "Registrar actividad para correos electrónicos o SMS automatizados"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send as"
-msgstr "Enviar a"
+msgstr "Enviar como"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "before"
@@ -1629,7 +1629,7 @@ msgstr "Usted no tiene permisos suficientes para eliminar esta etiqueta reservad
 
 #: CRM/Admin/Form/Tag.php
 msgid "Selectable?"
-msgstr "¿Se puede escoger?"
+msgstr "¿Seleccionable?"
 
 #: CRM/Admin/Form/Tag.php
 msgid "The tag '%1' has been deleted."
@@ -2007,7 +2007,7 @@ msgstr "¿Está seguro que desea eliminar este mapeo?"
 
 #: CRM/Admin/Page/Mapping.php
 msgid "This operation cannot be undone."
-msgstr "Esta operación no puede ser deshecha."
+msgstr "Esta operación no se puede deshacer."
 
 #: CRM/Admin/Page/Mapping.php
 msgid "Edit Mapping"
@@ -2212,7 +2212,7 @@ msgstr "Propiedad"
 
 #: ang/crmCxn/ConfirmConnectCtrl.html
 msgid "The application, \\\"%1\\\", requests permission to access your system."
-msgstr "La aplicación, /\"%1/\", solicita permiso para acceder a su sistema."
+msgstr "La aplicación, \\\"%1\\\", solicita permiso para acceder a su sistema."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Are you sure you want to reconnect \\\"%1\\\"?"
